--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,30 @@
 spring.application.name=kori
+
+# ----------------------------------------
+# PostgreSQL datasource (Phase 2)
+# ----------------------------------------
+spring.datasource.url=jdbc:postgresql://localhost:5432/kori
+spring.datasource.username=kori
+spring.datasource.password=kori
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# ===============================
+# JPA / Hibernate
+# ===============================
+spring.jpa.open-in-view=false
+spring.jpa.hibernate.ddl-auto=validate
+
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+spring.jpa.properties.hibernate.format_sql=false
+
+# ===============================
+# Flyway
+# ===============================
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+
+# ===============================
+# Logging
+# ===============================
+logging.level.org.hibernate.SQL=warn
+logging.level.org.hibernate.orm.jdbc.bind=warn
