feat(core + tests): Added a shared idempotency request hasher and wired idempotent payment flows to pass request hashes into commands for payload-based conflict detection.  Idempotency persistence now stores request hashes and expiry timestamps, enforces payload conflicts, and uses a configurable TTL with a database migration to add the new columns.   Web MVC test scaffolding now stubs idempotency hashing to support controller constructor updates in tests.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,11 @@ spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 
 # ===============================
+# Idempotency
+# ===============================
+kori.idempotency.ttl=PT24H
+
+# ===============================
 # Logging
 # ===============================
 logging.level.org.hibernate.SQL=warn
