feat(API Documentation): Add springdoc dependency and OpenAPI/Swagger configuration to expose an executable REST contract. Centralised the OpenAPI headers and shared error responses via customizers, plus added the idempotent marker and documented error schema for the standard API error format

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,12 @@ kori.idempotency.ttl=PT24H
 # ===============================
 logging.level.org.hibernate.SQL=warn
 logging.level.org.hibernate.orm.jdbc.bind=warn
+
+# ===============================
+# OpenAPI / Swagger UI
+# ===============================
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui
+
+spring.security.user.name=dev
+spring.security.user.password=dev
