feat(core): Added a request filter that generates/propagates X-Correlation-Id, stores it in MDC, and echoes it in responses for log correlation. Enriched audit persistence to include correlationId in audit metadata when present, and documented the correlation header in OpenAPI. Updated logging patterns to emit the correlation ID in both default and dev profiles.

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -25,5 +25,6 @@ spring.flyway.enabled=false
 # ===============================
 # Logging (optionnel)
 # ===============================
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} %-5level [%X{correlationId}] %logger{36} - %msg%n
 logging.level.org.hibernate.SQL=warn
 logging.level.org.hibernate.orm.jdbc.bind=warn
