--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,6 +31,7 @@ kori.idempotency.ttl=PT24H
 # ===============================
 # Logging
 # ===============================
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} %-5level [%X{correlationId}] %logger{36} - %msg%n
 logging.level.org.hibernate.SQL=warn
 logging.level.org.hibernate.orm.jdbc.bind=warn
 
