feat(core): Added a scheduled ledger consistency checker that logs and emits audit alerts on double-entry anomalies with sample transaction IDs. Exposed and implemented a query to detect inconsistent transactions in the ledger port and JPA adapter/repository. Enabled scheduling and added configuration for the periodic ledger checks.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,6 +36,12 @@ logging.level.org.hibernate.SQL=warn
 logging.level.org.hibernate.orm.jdbc.bind=warn
 
 # ===============================
+# Ledger consistency checks
+# ===============================
+kori.ledger.consistency-check.fixed-delay-ms=900000
+kori.ledger.consistency-check.initial-delay-ms=60000
+
+# ===============================
 # OpenAPI / Swagger UI
 # ===============================
 springdoc.api-docs.path=/api-docs
