feat(security): enforce deny-by-default with role-based access and JWT tests
- Configure Spring Security with endpoint-level deny-by-default (anyRequest().denyAll())
- Whitelist public endpoints for OpenAPI/Swagger and health checks
- Define minimal role mapping for critical endpoints (payments, payouts, config)
- Add WebMvc security tests covering 401 (no token), 403 (missing role), and 200 (authorized)
- Add JWT HMAC secret property for JwtDecoder configuration
- Update REST contract to document security policy and endpoint-to-role mapping

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -56,3 +56,4 @@ springdoc.swagger-ui.path=/swagger-ui
 
 spring.security.user.name=dev
 spring.security.user.password=dev
+app.security.jwt-secret=changeit-changeit-changeit-changeit
