feat(security): Configure Spring Security with Keycloak JWT issuer and unified role mapping Switch resource server to Keycloak issuer-uri with conditional HMAC secret fallback for test/dev. Normalize and merge JWT roles from realm, resource, and custom claims into ROLE_* authorities. Add env-driven Keycloak config and extend auth smoke tests to validate Keycloak role-based access.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.application.code=kori
+spring.application.name=kori
+server.port=8081
 
 # ----------------------------------------
 # PostgreSQL datasource (Phase 2)
@@ -6,7 +7,7 @@ spring.application.code=kori
 spring.datasource.url=jdbc:postgresql://localhost:5432/kori
 spring.datasource.username=kori
 spring.datasource.password=kori
-spring.datasource.driver-class-code=org.postgresql.Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # ===============================
 # JPA / Hibernate
@@ -54,6 +55,8 @@ kori.retention.purge.initial-delay-ms=60000
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui
 
-spring.security.user.name=dev
-spring.security.user.password=dev
-app.security.jwt-secret=changeit-changeit-changeit-changeit
+#spring.security.user.name=dev
+#spring.security.user.password=dev
+#app.security.jwt-secret=changeit-changeit-changeit-changeit
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/kori
+kori.security.keycloak.client-id=kori-api
