feat(security): Centralize security properties and enforce explicit JWT mode (issuer vs HMAC) - Centralized security configuration with explicit JWT mode selection and validation - Hardened ActorContext extraction: auth failure instead of IllegalArgumentException - MVC resolver now rejects invalid/missing ActorContext claims outside dev fallback - Clear prod/dev/test properties split with controlled fallback behavior - Updated WebMvc tests to require valid ActorContext claims (403 when missing)

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-spring.application.code=kori
+spring.application.name=kori
 
 # ----------------------------------------
 # PostgreSQL datasource (DEV)
@@ -21,6 +21,13 @@ spring.jpa.properties.hibernate.format_sql=false
 # Flyway (DEV ONLY)
 # ===============================
 spring.flyway.enabled=false
+
+# ===============================
+# Security (DEV ONLY)
+# ===============================
+kori.security.jwt.mode=hmac
+kori.security.jwt.hmac-secret=changeit-changeit-changeit-changeit
+kori.security.actor-context.dev-header-fallback-enabled=true
 
 # ===============================
 # Logging (optionnel)
