--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -55,8 +55,9 @@ kori.retention.purge.initial-delay-ms=60000
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui
 
-#spring.security.user.name=dev
-#spring.security.user.password=dev
-#app.security.jwt-secret=changeit-changeit-changeit-changeit
+# ===============================
+# Security (PROD defaults)
+# ===============================
+kori.security.jwt.mode=issuer
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/kori
 kori.security.keycloak.client-id=kori-api
