Added PostgreSQL datasource settings to the test profile so integration tests reuse the same database configuration as production defaults.

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,6 +1,10 @@
 # ===============================
 # JPA / Hibernate (TEST)
 # ===============================
+spring.datasource.url=jdbc:postgresql://localhost:5432/kori
+spring.datasource.username=kori
+spring.datasource.password=kori
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=validate
 
