--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -56,7 +56,7 @@ springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui
 
 # ===============================
-# Security (PROD defaults)
+# Security
 # ===============================
 kori.security.jwt.mode=issuer
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/kori
